# edusantara-installer

./: ChangeLog  autogen.sh  configure.ac
debian/: changelog  control  rules
po/: edusantara-installer.pot
scripts/: Makefile.am  b-i-copy-fs  b-i-install-grub  b-i-setup-fs  edusantara-session-try-installer
src/: Makefile.am  edusantara-installer.desktop  installer.vala
system/: Makefile.am  index.html  installer.js  translations.id.json
